style.css: fix the vertical whitespace between the navigation links and the content on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,6 @@
 .sidebar {
 	width: 290px;
 	float: left;
-	height: 200px;
 }
 .content {
 	margin-left: 293px;
